# bonass_soccer

./: README.md  docker-compose-local.yml  docker-compose-production.yml  gunicorn.conf.py  manage.py  pyproject.toml
.envs/.local/: .django  .postgres
.envs/.production/: .django
bonass_soccer/evaluations/: admin.py  apps.py  urls.py  views.py
bonass_soccer/evaluations/migrations/: 0001_initial.py  0002_initial.py
bonass_soccer/evaluations/models/: evaluations.py  period.py
bonass_soccer/evaluations/templates/: jambo_view.html
bonass_soccer/form_manager/: admin.py  apps.py  evaluations.py  urls.py  views.py
bonass_soccer/form_manager/migrations/: 0001_initial.py
bonass_soccer/form_manager/models/: conditions.py  models.py  responses.py
bonass_soccer/form_manager/templates/: form_rendering.html
bonass_soccer/players/: admin.py  apps.py  models.py  urls.py  views.py
bonass_soccer/players/migrations/: 0001_initial.py  0002_game_code.py
bonass_soccer/players/templates/: random_call.html  slider.html
bonass_soccer/utils/: compute_random_distribution.py  models.py
bonass_soccer/workflow_manager/: apps.py  models.py  services.py  signals.py  tasks.py  workflow_parser.py
bonass_soccer/workflow_manager/utils/: workflow.yaml
compose/django/: Dockerfile
compose/local/django/: start
compose/production/certbot/: Dockerfile  start.sh
compose/production/django/: entrypoint  start
config/: asgi.py  db.sqlite3  urls.py  wsgi.py
config/settings/: local.py  production.py
staticfiles/css/: styles.css
staticfiles/js/: scripts.js
(+12 files in other folders)
